fix gap between fav and tool bar

--- a/userChrome.css
+++ b/userChrome.css
@@ -86,8 +86,8 @@ menupopup[placespopup="true"] {
 /* https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/autohide_bookmarks_toolbar.css */
 
 #PersonalToolbar {
-  --uc-bm-height: 22px; /* Might need to adjust if the toolbar has other buttons */
-  --uc-bm-padding: 4px; /* Vertical padding to be applied to bookmarks */
+  --uc-bm-height: 20px; /* Might need to adjust if the toolbar has other buttons */
+  --uc-bm-padding: 2px; /* Vertical padding to be applied to bookmarks */
   --uc-autohide-toolbar-delay: 600ms; /* The toolbar is hidden after 0.6s */
 
   /* 0deg = "show" ; 90deg = "hide" ;  Set the following to control when bookmarks are shown */
